--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,10 @@
 
     {% include footer.html %}
 
+    {% if site.google_analytics %}
+      {% include google-analytics.html %}
+    {% endif %}
+
   </body>
 
 </html>
