--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -71,35 +71,29 @@ figure {
     font-size: $small-font-size*1.25;
     line-height: 1.4;
     color: $grey-color-dark;
-    clear: both;
   }
   @media screen and (min-width: 680px){
-  position: relative;
-  display:block;
-  max-width: 75%;
-  width: 30%;  
-  box-sizing: border-box;
-  margin-top:     5px;
-  margin-bottom:  10px;
-  margin-left:    -$spacing-unit;
-  margin-right:   $spacing-unit/2;
-  float: left;
-  &.img-right {
-    margin-right:    -$spacing-unit;
-    margin-left: $spacing-unit/2;
-    float: right;
-  }
-  > figcaption {
     position: relative;
-    left: 0px;
-    clear: both;
-    font-size: $small-font-size;
+    display:block;
+    max-width: 75%;
+    width: 30%;  
+    box-sizing: border-box;
+    margin-top:     5px;
+    margin-bottom:  10px;
+    margin-left:    -$spacing-unit;
+    margin-right:   $spacing-unit/2;
+    float: left;
+    &.img-right {
+      margin-right:    -$spacing-unit;
+      margin-left: $spacing-unit/2;
+      float: right;
+    }
+    > figcaption {
+      position: relative;
+      left: 0px;
+      font-size: $small-font-size;
+    }
   }
-  }
-}
-figure::after {
-  content:"";
-clear:both;
 }
 
 
@@ -161,14 +155,17 @@ a {
  * Blockquotes
  */
 blockquote {
-  font-family: 'Poly', georgia;
   font-style:italic;
   line-height:1.618;
-  background:transparent url(quotation-mark.png) no-repeat scroll 25px 1.4em;
+  background:transparent url(../images/quotation-mark.png) no-repeat scroll 25px 1.4em;
   padding:0.1em 1em 0.1em 60px;
   margin:1.618em 0 1.618em -60px;
   color: #666055;
   text-rendering: optimizelegibility;
+  > p {
+    margin: 1em 0px;
+    padding:0px;
+  }
 }
 
 /**
