--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <p class="text">Built with &lt;3 powering Jekyll. Blissfully hosted on Github. Design based on <a href="http://rsms.me/" target="_blank">rsms</a>.</p>
+  <p class="text">Built with &lt;3 powering Jekyll. Blissfully hosted on Github.</p>
   <ul style="list-style-type: none;">
     {% if site.github_username %}
     <li style="display: inline;">
