--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
       {% endif %}
 
     {% include footer.html %}
+    {% include masonry.html %}
 
     {% if site.google_analytics %}
       {% include google-analytics.html %}
