--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ $spacing-unit:     40px;
 
 $text-color:       #111;
 $background-color: #DDD;
-$brand-color:      #751342;
+$brand-color:      #7A5868;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
