--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,19 @@
 ---
 layout: default
 ---
-<div class="page-content">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+	<div class="page-content">
+{% if page.include %}
+  {% include {{ page.include }} %}
+{% else %}
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+	  <header class="post-header">
+	    <h1 class="post-title">{{ page.title }}</h1>
+	  </header>
 
-</div>
+	  <article class="post-content">
+	    {{ content }}
+	  </article>
+
+{% endif %}
+	</div>
