--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,10 @@
       {% include google-analytics.html %}
     {% endif %}
 
+    {% if site.chat %}
+      {% include tawk-chat.html %}
+    {% endif %}
+
   </body>
 
 </html>
