--- a/_includes/goodreads.html
+++ b/_includes/goodreads.html
@@ -11,15 +11,19 @@
           padding: 0px 0px;
           overflow: hidden;
         }
+        #gr_grid_widget_1446879331 h2 a {
+          display: none;
+        }
       </style>
+
+    <div>
+      <p>Миний амьдралд ном гэдэг их чухал. Номоор дамжуулан маш олон хүмүүсийн дотоод ертөнцтэй танилцах боломжтой гэж бодогддог юм. Ганцхан амьдрах амьдралд яагаад бусдын амьдралын туршлагаас суралцаж болохгүй гэж? Тэгээд ч хүний дотоод ертөнц гэдэг хамгийн тайлагдашгүй оньсого болохоор тэдгээр ертөнц бүрийг тайлж уншихын тулд аль болох олон ертөнцийн хаалгыг нээсэн олон сайхан номнууд унших дуртай байдаг юм.  </p>
+      <p> За тэгээд миний номын сантай танилцана уу.</p>
+    </div>
+      <!-- block titles -->
       <div id="gr_grid_widget_1446879331">
         <!-- Show static html as a placeholder in case js is not enabled - javascript include will override this if things work -->
-            <h2>
-      <a style="text-decoration: none;" href="https://www.goodreads.com/review/list/2044236-nyamka-ganni?shelf=read&utm_medium=api&utm_source=grid_widget">Nyamka's bookshelf: read</a>
-    </h2>
-  <div class="gr_grid_container">
-
-  </div>
-
+<!--             <h2> <a style="text-decoration: none;" href="https://www.goodreads.com/review/list/2044236-nyamka-ganni?shelf=read&utm_medium=api&utm_source=grid_widget">Миний уншсан номнуудаас</a> </h2> -->
+          <div class="gr_grid_container"> </div>
       </div>
       <script src="https://www.goodreads.com/review/grid_widget/2044236.Nyamka's%20bookshelf:%20read?cover_size=medium&hide_link=&hide_title=&num_books=200&order=d&shelf=read&sort=date_read&widget_id=1446879331" type="text/javascript" charset="utf-8"></script>
