--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,10 @@
 
     <nav class="site-nav">
       <div class="trigger">
+          <a class="page-link" href="/">Blog</a> |
         {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+          {% if page.title and page.isnav %}
+          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a> |
           {% endif %}
         {% endfor %}
       </div>
